--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/AinsOolz/Web-App-Problem-Statement-LS18",
+  "homepage": "https://ainsoolz.github.io/Web-App-Problem-Statement-LS18",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
